@@ -1,5 +1,6 @@
 ﻿2011-06-13 COAH96KoxU <queue glasscore.net>
 
+	* req/App.php: release 2
 	* style/style.css,
 	  req/Handler/Read.php,
 	  req/Visualizer/Read/Success.php: 作品閲覧不可設定時に投稿時エラーとして表示されてしまうのを修正
@@ -9,6 +10,17 @@
 	* req/Visualizer/Index/Tag.php: 戻る表記の修正
 	* req/Handler/Index.php,
 	  req/Visualizer/Index/Tag.php: 作者およびタグの非表示設定を反映しないのを修正
+	* config.php,
+	  req/Core/Configuration.php,
+	  req/Handler/Util.php,
+	  req/Model/ThreadEntry.php,
+	  req/Visualizer/Index/Index.Atom.php,
+	  req/Visualizer/Index/Index.Rss.php,
+	  req/Visualizer/Read/Index.php,
+	  req/Visualizer/Read/Edit.php,
+	  req/Visualizer/Template/Index.php,
+	  req/Visualizer/mobile/Read/Index.php,
+	  req/Visualizer/simple/Read/Index.php: 概要を使用するかどうかの設定を追加
 
 2011-06-12 COAH96KoxU <queue glasscore.net>
 
